     text= and text_color= keys
 * user interface
   * display the race in the unit preview panel (with gender variation support).
   * allow to use team labels also for 1-player-teams (bug #9747)
   * changing the langugage now sets the version number in the title
     properly.
   * show 'back to round xxx' also in 800 x 600 resolution
 * WML engine:
   * new event "last breath" will be triggered when a unit dies, but
     before the animation is played
   * allow ThemeWML to display the race.
   * new "random_gender=" key (boolean) to single units declarations in WML;
     the engine will generate a random gender for the spawned unit just like
     when it's recruited
   * updated {GENERIC_UNIT ...} macro to take advantage of random_gender
   * fixed [filter_radius] to support [and][or][not] and radius=
   * undoing recruits is no longer allowed
   * added rand= for [set_variable] which can be used in MP, the user has to
     make sure it stays in sync
   * units spawned with unit in events can now have random traits and also the
     names are the same (bug #10501)
 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * added gzip and gunzip command line parameters
   * replaced the 'Binary Saves' option with 'Compressed Saves' and now
     writes gzip files
   * added a "ping_timeout" preference to allow adjusting the default timeout
     value ('60') from the preferences file
   * rewrote the network code to also receive gzipped data:
     * The clients send gzipped data to the MP server. 
     * The MP server can send gzipped data depending on a hidden parameter 
       which is off by default.
     * The campaign server sends and receives binary_wml.
   * fixed a crash when the attacker dies while performing a desparate attack.
     The crash seemed only to happen under Windows but valgrind also
     complained (bug #10496)
   * loading a content with invalid wml does not terminate the game